fixed size for bm-meny-wrap

--- a/src/components/navigation/HamburgerMenu/hamburgerMenu.scss
+++ b/src/components/navigation/HamburgerMenu/hamburgerMenu.scss
@@ -49,7 +49,7 @@
 		position: absolute;
 		top: 64px;
 		height: fit-content !important;
-		width: 70vw !important;
+		width: 290px !important;
 	}
 }
 
